k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msg-server
  namespace: msg
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: chat.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat
                port:
                  number: 8080
    - host: session.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: session
                port:
                  number: 8090
    - host: orghub.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orghub
                port:
                  number: 8091
    - host: tenanthub.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tenanthub
                port:
                  number: 8092
    - host: fileman.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fileman
                port:
                  number: 8081
